[gd_scene load_steps=19 format=2]

[ext_resource path="res://Images/background/background_forest.jpeg" type="Texture" id=1]
[ext_resource path="res://PlayerGood.tscn" type="PackedScene" id=2]
[ext_resource path="res://colisao.tscn" type="PackedScene" id=3]
[ext_resource path="res://Banana.tscn" type="PackedScene" id=4]
[ext_resource path="res://colisaoComBananaeCage.tscn" type="PackedScene" id=5]
[ext_resource path="res://Banana2.tscn" type="PackedScene" id=6]
[ext_resource path="res://banana3.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cage.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cage2.gd" type="Script" id=9]
[ext_resource path="res://Main.gd" type="Script" id=10]
[ext_resource path="res://labelBananas.tscn" type="PackedScene" id=11]
[ext_resource path="res://labelVidas.tscn" type="PackedScene" id=13]
[ext_resource path="res://Songs/forest_music.wav" type="AudioStream" id=14]
[ext_resource path="res://Songs/monkey_imitation.wav" type="AudioStream" id=15]
[ext_resource path="res://Songs/monkey_cry.wav" type="AudioStream" id=16]
[ext_resource path="res://Images/botao/botaoDireita1.png" type="Texture" id=17]
[ext_resource path="res://Images/botao/botaoEsquerda1.png" type="Texture" id=18]
[ext_resource path="res://Cage3.gd" type="Script" id=19]

[node name="Main" type="Node2D"]
script = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.0
margin_right = 1025.0
margin_bottom = 410.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colisao" parent="." instance=ExtResource( 3 )]
position = Vector2( -9, 319 )

[node name="colisao2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1032, 315 )

[node name="banana" parent="." instance=ExtResource( 4 )]
position = Vector2( 498, -42 )
scale = Vector2( 0.4, 0.4 )

[node name="PlayerGood" parent="." instance=ExtResource( 2 )]
position = Vector2( 596, 310 )

[node name="MacacoGrito" type="AudioStreamPlayer" parent="PlayerGood"]
stream = ExtResource( 16 )

[node name="MacacoBarulho" type="AudioStreamPlayer" parent="PlayerGood"]
stream = ExtResource( 15 )

[node name="ChaoBananaCage" parent="." instance=ExtResource( 5 )]
position = Vector2( -3, 403 )

[node name="banana2" parent="." instance=ExtResource( 6 )]
position = Vector2( 337, -41 )
scale = Vector2( 0.4, 0.4 )

[node name="banana3" parent="." instance=ExtResource( 7 )]
position = Vector2( 192, -43 )
scale = Vector2( 0.15, 0.15 )

[node name="Cage" parent="." instance=ExtResource( 8 )]
position = Vector2( 618, 52 )
scale = Vector2( 0.41, 0.41 )

[node name="Cage2" parent="." instance=ExtResource( 8 )]
modulate = Color( 0.592157, 0.282353, 0.282353, 1 )
position = Vector2( 141, 54 )
scale = Vector2( 0.41, 0.41 )
script = ExtResource( 9 )

[node name="labelBananas" parent="." instance=ExtResource( 11 )]
modulate = Color( 0.772549, 0.964706, 0.0862745, 1 )
margin_left = 412.0
margin_top = 372.0
margin_right = 412.0
margin_bottom = 372.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="labelVidas" parent="." instance=ExtResource( 13 )]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 500.0
margin_top = 374.0
margin_right = 540.0
margin_bottom = 398.0
rect_scale = Vector2( 1.3, 1.4 )

[node name="MusicaDeFundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
pitch_scale = 2.16
autoplay = true

[node name="CameraDaMain" type="Camera2D" parent="."]
position = Vector2( 3, 1 )
offset = Vector2( 510, 200 )
current = true

[node name="leftTouch" type="TouchScreenButton" parent="."]
position = Vector2( 80, 338 )
scale = Vector2( 0.12, 0.1 )
normal = ExtResource( 18 )
action = "ui_left"

[node name="rightTouch" type="TouchScreenButton" parent="."]
position = Vector2( 860, 337 )
scale = Vector2( 0.12, 0.1 )
normal = ExtResource( 17 )
action = "ui_right"

[node name="Cage3" parent="." instance=ExtResource( 8 )]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 0, 1, 0.0627451, 1 )
position = Vector2( 426, -124 )
script = ExtResource( 19 )

[node name="ChaoCage3" parent="." instance=ExtResource( 5 )]
position = Vector2( -2, 513 )

[connection signal="body_entered" from="banana" to="banana" method="_on_banana_body_entered"]
[connection signal="body_entered" from="banana" to="PlayerGood" method="_on_banana_body_entered"]
[connection signal="area_entered" from="ChaoBananaCage" to="banana" method="_on_ChaoBananaCage_area_entered"]
[connection signal="area_entered" from="ChaoBananaCage" to="banana2" method="_on_ChaoBananaCage_area_entered"]
[connection signal="area_entered" from="ChaoBananaCage" to="banana3" method="_on_ChaoBananaCage_area_entered"]
[connection signal="area_entered" from="ChaoBananaCage" to="Cage" method="_on_ChaoBananaCage_area_entered"]
[connection signal="area_entered" from="ChaoBananaCage" to="Cage2" method="_on_ChaoBananaCage_area_entered"]
[connection signal="body_entered" from="banana2" to="PlayerGood" method="_on_banana2_body_entered"]
[connection signal="body_entered" from="banana2" to="banana2" method="_on_banana2_body_entered"]
[connection signal="body_entered" from="banana3" to="PlayerGood" method="_on_banana3_body_entered"]
[connection signal="body_entered" from="banana3" to="banana3" method="_on_banana3_body_entered"]
[connection signal="body_entered" from="Cage" to="PlayerGood" method="_on_Cage_body_entered"]
[connection signal="body_entered" from="Cage" to="Cage" method="_on_Cage_body_entered"]
[connection signal="body_entered" from="Cage2" to="PlayerGood" method="_on_Cage2_body_entered"]
[connection signal="body_entered" from="Cage2" to="Cage2" method="_on_Cage2_body_entered"]
[connection signal="body_entered" from="Cage3" to="PlayerGood" method="_on_Cage3_body_entered"]
[connection signal="body_entered" from="Cage3" to="Cage3" method="_on_Cage3_body_entered"]
[connection signal="area_entered" from="ChaoCage3" to="Cage3" method="_on_ChaoCage3_area_entered"]
